# yamski

./: .gitignore  Cargo.toml  names.csv
yamski-backend/: Cargo.toml
yamski-backend/src/: forms.rs  guards.rs  main.rs  models.rs  routing.rs
yamski-frontend/: Cargo.toml
