[package]
name = "yamski-backend"
version = "0.1.0"
authors = ["David Richardson <david@tankski.co.uk>"]
edition = "2018"

[dependencies]
rocket = "0.3.17"
rocket_codegen = "0.3.17"
chrono = "0.4.6"
url = "1.7.1"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"

[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["json"]